<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activites.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:backgroundTint="@color/g_black">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_tollbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/accent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Meal name">

            <ImageView
                android:id="@+id/img_meal_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/meal_detail"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddToFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/like_button"
        android:src="@drawable/ic_favorites"
        android:tint="@color/white"
        app:backgroundTint="#BF1212"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_5sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_category"
                    app:tint="@color/g_black"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_beef"
                    android:textStyle="bold"
                    android:textColor="@color/g_black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_area"
                    app:tint="@color/g_black"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/area_israel"
                    android:textStyle="bold"
                    android:textColor="@color/g_black" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/myfont"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/tv_instructions_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_2sdp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
